--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,11 +18,21 @@ body {
   -ms-user-select: none;
   user-select: none;
 }
+
+.enable-select {
+  -webkit-user-select: text !important;
+  -webkit-touch-callout: text !important;
+  -moz-user-select: text !important;
+  -ms-user-select: text !important;
+  user-select: text !important;
+  width: 100%;
+  display: inline-block;
+}
 .hide {
   display: none;
 }
 .landing-heading {
-  font-family: 'Source Code Pro', monospace;
+  /*font-family: 'Source Code Pro', monospace;*/
   font-weight: 400;
 }
 
@@ -30,10 +40,14 @@ body {
   color: black;
 }
 
+i.icon {
+  font-family: 'FontAwesome' !important;
+  font-size: 1.75em;
+}
 /* Buttons */
 .btn {
   color: white;
-  font-family: 'Source Code Pro', monospace;
+  /*font-family: 'Source Code Pro', monospace;*/
   padding: 0.5625rem 2.5rem;
   font-size: 0.8125rem;
   font-weight: 400;
@@ -106,7 +120,7 @@ body {
 /* Home button */
 .btn-home-hello {
   position: absolute;
-  font-family: 'Source Code Pro', monospace;
+  /*font-family: 'Source Code Pro', monospace;*/
   font-size: 11px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.85);
