--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -162,3 +162,12 @@ textarea.mde-text {
   border: 1px solid lightgrey;
 }
 
+img {
+  max-width: 100%;
+}
+
+/* Post Stylings*/
+.post-container p {
+  line-height: 1.8rem;
+  font-size: 1.1rem;
+}
