--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,6 +18,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  min-width: 0px;
 }
 
 .enable-select {
@@ -101,7 +102,6 @@ i.icon {
 
 /* Scaffolding */
 .site-wrapper {
-  display: table;
   width: 100%;
   height: 100vh;
   min-height: 100%;
