--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -172,6 +172,22 @@ img {
   font-size: 1.1rem;
 }
 
+/* for preview posts */
+.preview .container {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  content: '';
+  position: relative;
+}
+.preview .container:after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: linear-gradient(transparent 10px, white);
+}
 /** landing page styles ***/
 
 .panel-landing p {
